--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<section>
 		<h1>Git, GitHub & the Command Line</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
+		<p> This is Senia speaking ahem ahem ahem</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
